--- a/style.css
+++ b/style.css
@@ -113,6 +113,20 @@ body {
   height: 32px;
   display: block;
   user-select: none;
+  transition: transform 0.2s ease;
+  transform-origin: center;
+}
+
+.rotate-90 {
+  transform: rotate(90deg) !important;
+}
+
+.rotate-180 {
+  transform: rotate(180deg) !important;
+}
+
+.rotate-270 {
+  transform: rotate(270deg) !important;
 }
 
 .custom-cursor {
