--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ body::before {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 0.5px solid #ccc;
+  outline: 0.5px solid #ccc;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
