--- a/style.css
+++ b/style.css
@@ -270,6 +270,7 @@ body::before {
   background: #fff;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+  margin-top: 50px;
 }
 
 .cell {
