--- a/web/css/style.css
+++ b/web/css/style.css
@@ -299,7 +299,7 @@ body::before {
   height: fit-content;
   overflow: auto;
   padding: 10px;
-  background: #fff;
+  background: #000000;
   border-radius: 5px;
   box-shadow: 0 1px 3px rgba(0,0,0,0.1);
   margin-top: 50px;
@@ -308,7 +308,7 @@ body::before {
 .cell {
   width: 32px;
   height: 32px;
-  background-color: white;
+  background-color: rgb(46, 44, 44);
   display: flex;
   align-items: center;
   justify-content: center;
